Fixed overlapping mark issues and event binding glitch on page reload

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -29,7 +29,7 @@ a {
   }
 }
 
-a.button {
+a.button:not(.secondary) {
   &:visited {
     color: #fff !important;
   }
